--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,13 @@
 
     <string name="action_settings">Settings</string>
     <string name="delete_account">Delete Account</string>
+    <string name="reset_passwoed">Reset Password</string>
+    <string name="old_password">Old Password</string>
+    <string name="new_password">New Password</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="email_resest_password_link">Email Resest Password link</string>
+    <string name="reset_password">Reset password</string>
+    <string name="textview">TextView</string>
 </resources>
